@@ -10,7 +10,7 @@ return {
 		builddistance = 250,
 		builder = true,
 		buildpic = "rumad_king.dds",
-		buildtime = 100000,
+		buildtime = 250000,
 		canassist = true,
 		canattack = true,
 		cancapture = true,
@@ -27,8 +27,7 @@ return {
 		collisionvolumescales = "40 47 29",
 		collisionvolumetype = "Ell",
 		corpse = "8_dead",
-		defaultmissiontype = "Standby",
-		
+		defaultmissiontype = "Standby",		
 		energymake = 125,
 		energystorage = 1000,
 		explodeas = "COMMANDER_BLAST",
